# Turador

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  design.mermaid  todo.txt
assets/: goederen hoeveelheid.csv
libturador/: CMakeLists.txt
libturador/include/: commandhandler.hpp  commandmediator.hpp  csvparser.hpp  game.h  noncopyable.h
libturador/include/tura/: error.h  game.h  gamebuilder.h  gamebuilder.hpp  gameconfiguration.h  gamehelpers.hpp  harbor.h  harborbuilder.hpp  harborfactory.h  harborfactoryinterface.h  harborrepository.h  harborrepositoryinterface.h  shipbuilder.hpp
libturador/include/tura/app/: gameclient.hpp
libturador/include/tura/commandhandlers/: purchasecargocommandhandler.hpp
libturador/include/tura/commands/: commandbase.h  purchasecargocommand.h
libturador/include/tura/dal/models/: cargo.h  game.h  gamestate.h  harbor.h  harborcargo.h  harborcargogenerationparameters.h  harborgenerationparameters.h  ship.h  shiptype.h
libturador/include/tura/dal/repositories/: harborgenerationparametersfilerepository.h  harborgenerationparametersrepositoryinterface.h  sailroutefilerepository.hpp  sailrouterepository.h  shiptypefilerepository.h  shiptyperepositoryinterface.h
libturador/include/tura/domain/: commandmediator.hpp  constants.h  functionalerror.h  functionalerrorcategory.h  game.h  gamehelpers.hpp  harborgenerator.hpp  harborgeneratorinterface.h  shipgenerator.hpp  shipgeneratorinterface.h
libturador/include/tura/domain/commandhandlers/: firecommandhandler.hpp  purchasecannonscommandhandler.hpp  purchasecargocommandhandler.hpp  purchaseshipcommandhandler.hpp  repairshipcommandhandler.hpp  runcommandhandler.hpp  sailcommandhandler.hpp  sellcannonscommandhandler.hpp  sellcargocommandhandler.hpp  startgamecommandhandler.hpp  startsailingcommandhandler.hpp  surrendercommandhandler.hpp
libturador/include/tura/domain/commands/: commandbase.h  firecommand.h  purchasecannonscommand.h  purchasecargocommand.h  purchaseshipcommand.h  repairshipcommand.h  runcommand.h  sailcommand.h  sellcannonscommand.h  sellcargocommand.h  startgamecommand.h  startsailingcommand.h  surrendercommand.h
libturador/include/tura/domain/models/: cannon.h  cannonclass.h  cannontype.h  cargo.h  game.h  gamestate.h  harbor.h  harborcargo.h  harborcargogenerationparameters.h  harborgenerationparameters.h  lostreason.h  sailroute.h  sailtrip.h  ship.h  shipsizeclass.h  shiptype.h  shipweightclass.h  windstrength.h
libturador/include/tura/domain/states/: inbattlestate.h  inharborstate.h  loststate.h  sailingstate.h  state.h
libturador/include/tura/helpers/: array.hpp  chararray.hpp  commandmediator.hpp  csvparser.hpp  noncopyable.h
libturador/include/tura/models/: cargo.h  game.h  gamestate.h  harbor.h  harborcargo.h  harborcargostats.h  harborstats.h  ship.h  shiptype.h
libturador/include/tura/service/: gameclient.h
libturador/src/tura/: error.cpp  game.cpp  harborfactory.cpp  harborrepository.cpp
libturador/src/tura/dal/repositories/: harborgenerationparametersfilerepository.cpp  shiptypefilerepository.cpp
libturador/src/tura/domain/: constants.cpp  functionalerrorcategory.cpp  game.cpp
libturador/tests/: harborfactoryunittests.cpp  harborrepositoryunittests.cpp  main.cpp  tests.cpp
libturador/tests/helpers/: testhelpers.h
libturador/tests/mocks/: commandmediatormock.h  harborfactorymock.h  harborgenerationparametersrepositorymock.h  harborgeneratormock.h  mockharborfactory.h  mockharborrepository.h  shipgeneratormock.h  shiptyperepositorymock.h
libturador/tests/tura/: gameunittests.cpp  harborfactoryunittests.cpp
libturador/tests/tura/app/: gameclientunittests.cpp
libturador/tests/tura/commandhandlers/: purchasecargocommandhandlertests.cpp
libturador/tests/tura/dal/repositories/: harborgenerationparametersfilerepositoryunittests.cpp  shiptypefilerepositoryunittests.cpp
libturador/tests/tura/domain/: harborgeneratorunittests.cpp
libturador/tests/tura/domain/commandhandlers/: purchasecargocommandhandlerunittests.cpp  sellcargocommandhandlerunittests.cpp  startgamecommandhandlerunittests.cpp
libturador/tests/tura/service/: gameclientunittests.cpp
turador/: CMakeLists.txt
turador/src/: main.cpp
turador/src/tura/ui/: console.hpp  inputcommand.hpp  inputcommandparser.hpp  purchasecargoinputcommand.h  ui.hpp
turador/src/tura/ui/cli/: cliui.cpp  cliui.h  cliuistate.h  consolehelpers.hpp  helpers.hpp  inputcommand.hpp  inputcommandmediator.hpp  inputcommandparser.hpp
turador/src/tura/ui/cli/statehandlers/: basestatehandler.hpp  gamenotstartedstatehandler.hpp  gameoverstatehandler.hpp  inbattlestatehandler.hpp  inharborstatehandler.hpp  mapstatehandler.hpp  sailingstatehandler.hpp  statehandler.h
turador/tests/: tests.cpp
