cmake_minimum_required(VERSION 3.2)

set(DOMUM_PROJECT_NAME "Turador")

project(${DOMUM_PROJECT_NAME})

enable_testing()

###############################################################################
## Executables.
###############################################################################
add_subdirectory("turador")
